# advanced-bitfield

./: .clang-format  .gitignore  LICENSE  README.md  advanced_bitfield.hpp  bit_ops.hpp  bitcast.hpp  field_ref.hpp  get_int_storage.hpp  helper_macro.hpp  holder.hpp  storage_ops.hpp
examples/: a.out  overlapping_parts.cpp  simple.cpp  x86_segment_descriptor.cpp
tests/: CMakeLists.txt  FetchDoctest.cmake  README.md
tests/tests/: overlapping_parts.cpp  simple.cpp  x86_segment_descriptor.cpp
